--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-family: var(--main-font);
 }
 body {
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color);a */
 }
 .cover {
   background-color: #000000af;
@@ -19,18 +19,18 @@ body {
   transform: translateY(-4px);
 } */
 .about_text p {
-  color: var(--secondary-color);
+  /* color: var(--secondary-color); */
 }
 .countup p {
   /* color: white; */
   font-family: var(--heading-font);
 }
 .countup span {
-  color: white;
+  /* color: white; */
 }
 
 @media only screen and (min-width: 1024px) {
-  .project:nth-of-type(2) {
+  .our_projects .project:nth-of-type(2) {
     height: 70vh;
   }
 }
@@ -41,23 +41,49 @@ body {
 .swiper {
   width: 100%;
 }
-/* .videoBg {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  object-position: center;
+footer {
+  font-family: var(--heading-font);
+}
+.footer_box {
+  /* width: 33.33%; */
+}
+.execution li {
+  list-style-type: disc;
 }
 
-.lets_work .cover {
-  position: absolute;
-  top: 0;
-  background-color: #0000009c;
-  width: 100%;
-  height: 100%;
-  padding: 2rem 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 0.4rem;
-} */
+.all-services {
+  transition: 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+.service-detail h2 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.service-detail p {
+  color: var(--secondary-color);
+}
+.service_card input,
+.service_card textarea {
+  border: 1px solid rgba(114, 114, 114, 0.223);
+  min-height: 2.8rem;
+  padding: 0.4rem 0.5rem;
+  /* font-size: 0.9rem; */
+  font-weight: 400;
+  /* width: 100%; */
+}
+.service_card textarea {
+  resize: vertical;
+  min-height: 12rem;
+}
+.service_card textarea:focus,
+.service_card input:focus {
+  outline: none;
+  border: 1px solid var(--primary-color);
+  transition: 0.3s ease-in-out;
+}
+.service_card input::placeholder,
+.service_card textarea::placeholder {
+  color: rgba(82, 82, 82, 0.671);
+  font-size: 0.8rem;
+}
