--- a/src/App.css
+++ b/src/App.css
@@ -61,10 +61,12 @@ footer {
   text-transform: uppercase;
 }
 .service-detail p {
-  color: var(--secondary-color);
+  /* color: var(--secondary-color); */
 }
 .service_card input,
-.service_card textarea {
+.service_card textarea,
+.contact_page input,
+.contact_page textarea {
   border: 1px solid rgba(114, 114, 114, 0.223);
   min-height: 2.8rem;
   padding: 0.4rem 0.5rem;
@@ -72,18 +74,23 @@ footer {
   font-weight: 400;
   /* width: 100%; */
 }
-.service_card textarea {
+.service_card textarea,
+.contact_page textarea {
   resize: vertical;
   min-height: 12rem;
 }
 .service_card textarea:focus,
-.service_card input:focus {
+.service_card input:focus,
+.contact_page textarea:focus,
+.contact_page input:focus {
   outline: none;
   border: 1px solid var(--primary-color);
   transition: 0.3s ease-in-out;
 }
 .service_card input::placeholder,
-.service_card textarea::placeholder {
+.service_card textarea::placeholder,
+.contact_page input::placeholder,
+.contact_page textarea::placeholder {
   color: rgba(82, 82, 82, 0.671);
   font-size: 0.8rem;
 }
