--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ footer {
   /* width: 33.33%; */
 }
 .execution li {
-  list-style-type: disc;
+  /* list-style-type: disc; */
 }
 
 .all-services {
