--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -18,8 +17,8 @@
   --secondary-color: #11131c;
   --neon: #e3f81f;
   --bg-color: #11131c;
-  --heading-font: "Roboto Condensed", serif;
-  --main-font: "Source Sans 3", serif;
+  --heading-font: "Roboto", serif;
+  --main-font: "Roboto", serif;
 }
 
 @layer base {
